PathPresenter, File type item

--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Resources/Converters.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Resources/Converters.axaml
@@ -31,4 +31,5 @@
     <converters:ExceptionToStringConverter x:Key="ExceptionToStringConverter" />
     <converters:CommandToCommandNameConverter x:Key="CommandToCommandNameConverter" />
     <converters:ItemToImageConverter x:Key="ItemToImageConverter" />
+    <converters:StringReplaceConverter x:Key="PathPreformatter" OldValue="://" NewValue="/"/>
 </ResourceDictionary>
